support @unique in mmd and model generator

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ h11==0.14.0
 html5lib==1.1
 httptools==0.6.4
 idna==3.10
+iniconfig==2.0.0
 Jinja2==3.1.5
 kiwisolver==1.4.8
 lazy-model==0.2.0
@@ -30,11 +31,14 @@ pandas==2.2.3
 peewee==3.17.8
 pillow==11.1.0
 platformdirs==4.3.6
+pluggy==1.5.0
 propcache==0.2.1
 pydantic==1.10.21
 pydantic_core==2.27.2
 pymongo==4.9.2
 pyparsing==3.2.1
+pytest==8.3.4
+pytest-asyncio==0.25.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2024.2
