change app_port to server_port

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "mongo_uri": "mongodb://localhost:27017",
     "db_name": "myDb",
     "host": "127.0.0.1",
-    "app_port": 5500,
+    "server_port": 5500,
     "log_level": "info",
     "environment": "development"
 }
