handle service initizers in main

--- a/config.json
+++ b/config.json
@@ -1,9 +1,13 @@
-
 {
     "mongo_uri": "mongodb://localhost:27017",
-    "db_name": "myDb",
+    "db_name": "eventMgr",
     "host": "127.0.0.1",
     "server_port": 5500,
     "log_level": "info",
-    "environment": "development"
+    "environment": "development",
+    "auth.cookies.redis" : {
+       "host": "127.0.0.1",
+       "port": 6379,
+       "db": 0
+    }
 }
