cli overrides backend from config.json

--- a/config.json
+++ b/config.json
@@ -1,13 +1,16 @@
 {
-    "mongo_uri": "mongodb://localhost:27017",
-    "db_name": "eventMgr",
-    "host": "127.0.0.1",
-    "server_port": 5500,
-    "log_level": "info",
-    "environment": "development",
+    "backend"		: "mongo",
+    "backend-es"	: "es",
+    "mongo_uri"		: "mongodb://localhost:27017",
+    "es_uri"		: "http://localhost:9200",
+    "db_name"		: "eventMgr",
+    "host"		: "127.0.0.1",
+    "server_port"	: 5500,
+    "log_level"		: "info",
+    "environment"	: "development",
     "auth.cookies.redis" : {
        "host": "127.0.0.1",
        "port": 6379,
-       "db": 0
+       "db"  : 0
     }
 }
