--- a/requirements.txt
+++ b/requirements.txt
@@ -62,3 +62,17 @@ websockets==14.2
 wheel==0.45.1
 yarl==1.18.3
 yfinance==0.2.52
+beanie==1.29.0
+black==25.1.0
+elasticsearch==8.12.0
+email_validator==2.2.0
+fastapi==0.115.12
+Jinja2==3.1.5
+motor==3.6.1
+pathspec==0.12.1
+pydantic==2.11.3
+pymongo==4.9.2
+PyYAML==6.0.2
+redis==5.2.1
+starlette==0.46.2
+typing_extensions==4.12.2
